<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quizzo</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_passwordRepeat">Repeat password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_password">Password must be at least 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Username">Username</string>
    <string name="Login">Login</string>
    <string name="Signup">Sign up</string>
    <string name="usernameToLong">Too long!</string>
    <string name="highscore">Highscore</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="play">Play</string>
    <string name="sign_up">Sign up</string>
    <string name="quizzo">QUIZZO</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="choose_theme">Choose theme:</string>
    <string name="games">Games</string>
    <string name="food">Food</string>
    <string name="tv_shows">Tv-shows</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="go">GO!</string>
    <string name="sport">Sport</string>
    <string name="geography">Geography</string>
    <string name="choose_difficulty">Choose difficulty:</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="video_games">Video games</string>
    <string name="film">Film</string>
    <string name="great_job">GREAT JOB!</string>
    <string name="home">HOME</string>
    <string name="retry">RETRY</string>
    <string name="Score">Score</string>
    <string name="need_to_signed_up_save_score">You need to be signed up to be able to save your score</string>
    <string name="I_want_to_sign_up">I want to sign up now!</string>
    <string name="another_time">Maybe another time</string>
    <string name="help_one">1. Choose a category you want and then the game difficulty. </string>
    <string name="help_two">2. Depending on the difficulty you choose, you will get x ammount of points.\nEasy: 1p\nMedium: 3p\nHard: 5p </string>
    <string name="help_three">3. Read the question and press one of the answers you think is the right one.</string>
    <string name="help_four">4. For every question you see you have to answer within 10 seconds or the question will change. \n if You get a question wrong you will get a point deduction.\n Easy: none\n Medium: 1p\n Hard: 2p</string>
    <string name="help_five">5. After the questions are done you will get a score that will be put on the highscore list. If you are good enough ;)</string>
    <string name="emailValidation">Please enter a valid email</string>
    <string name="passwordValidation">Password is not valid</string>
    <string name="notValidEmail">Not a valid email</string>
    <string name="dbEmailNotValid">Login failed or account does not exist</string>
    <string name="unToShort">Username must be at least 2 characters</string>
    <string name="pwToShort">Password must be at least 5 characters</string>
    <string name="pwNotMatch">Password does not match</string>
    <string name="signupFail">Failed signing up, try again</string>
</resources>
