<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">

    <TextView
        android:id="@+id/quizzoTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/quizzo"
        android:textSize="40sp"
        app:fontFamily="cursive"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/goButton"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/chooseDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_difficulty"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/goButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseTheme" />

    <TextView
        android:id="@+id/chooseTheme"
        android:layout_width="203dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:text="@string/choose_theme"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizzoTitle3" />

    <RadioGroup
        android:id="@+id/themeRadioGroup"
        android:layout_width="367dp"
        android:layout_height="243dp"
        app:layout_constraintBottom_toTopOf="@+id/chooseDifficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseTheme">

        <RadioButton
            android:id="@+id/sportButton"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/sport" />

        <RadioButton
            android:id="@+id/geographyButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/geography" />

        <RadioButton
            android:id="@+id/filmButton"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/film" />

        <RadioButton
            android:id="@+id/videoGamesButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/video_games" />

        <RadioButton
            android:id="@+id/generalKnowledgeButton"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/general_knowledge" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/difficultyRadioGroup"
        android:layout_width="359dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/goButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseDifficulty" >

        <RadioButton
            android:id="@+id/easyButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/mediumButton"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/hardButton"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/hard" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>