<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_animation"
    android:id="@+id/homeLayout"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/highScoreButton"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_marginTop="88dp"
        android:text="@string/highscore"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

    <TextView
        android:id="@+id/quizzoTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/quizzo"
        android:textSize="40sp"
        app:fontFamily="cursive"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="181dp"
        android:layout_height="49dp"
        android:layout_marginTop="96dp"
        android:text="@string/play"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizzoTitle2" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_marginTop="200dp"
        android:text="@string/help"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_button"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpButton" />

</androidx.constraintlayout.widget.ConstraintLayout>