<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_animation"
    android:id="@+id/showScoreLayout"
    tools:context=".ShowScoreActivity">

    <Button
        android:id="@+id/homeButton"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_button"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retryButton" />

    <Button
        android:id="@+id/retryButton"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/rounded_button"
        android:text="@string/retry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highscoreButton" />

    <Button
        android:id="@+id/highscoreButton"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/rounded_button"
        android:text="@string/highscore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreText" />

    <TextView
        android:id="@+id/quizzoTitle5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/quizzo"
        android:textSize="40sp"
        app:fontFamily="cursive"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goodJob"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:layout_marginTop="92dp"
        android:text="@string/great_job"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizzoTitle5" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="173dp"
        android:layout_height="34dp"
        android:layout_marginTop="84dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goodJob" />
</androidx.constraintlayout.widget.ConstraintLayout>